Sorta working now
- Added a simple CLI executable for basic integration testing
- Updated README with instructions on running fluent-bit in docker for testing
- Fixed message structures
- PackedForwardMessage now works correctly (but unit test is wrong)
- CompressedPackedForwardMessage still not correct, pukes in integration testing

--- a/fixtures/fluent.conf
+++ b/fixtures/fluent.conf
@@ -1,3 +1,5 @@
+[SERVICE]
+    Log_Level   debug
 
 [INPUT]
     Name        forward
@@ -5,5 +7,5 @@
     Port        24224
 
 [OUTPUT]
-    Name        stdout
+    Name        file
     Match       *
