--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
 language: go
 go:
   - "1.16"
+
+env:
+  matrix:
+    - MAKE_TASK="lintall travis-lint gosec scan-nancy"
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - go : tip
+
+script:
+  - make $MAKE_TASK
+
 cache:
   directories:
     - $HOME/.cache/go-build
