--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 
 env:
   matrix:
-    - MAKE_TASK="lintall travis-lint gosec scan-nancy"
+    - MAKE_TASK="lintall travis-lint"
 
 matrix:
   fast_finish: true
