--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
 
 before_install:
   - pip --quiet install yamllint
+  - go get github.com/sonatype-nexus-community/nancy
 
 script:
   - make $MAKE_TASK
