--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ matrix:
 
 before_install:
   - pip --quiet install yamllint
+  - go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.42.0
+  - go get github.com/securego/gosec/cmd/gosec
   - go get github.com/sonatype-nexus-community/nancy
+  - go mod tidy
 
 script:
   - make $MAKE_TASK
