--- a/fixtures/fluent.conf
+++ b/fixtures/fluent.conf
@@ -6,6 +6,10 @@
     Listen      0.0.0.0
     Port        24224
 
+# [OUTPUT]
+#     Name        file
+#     Match       *
+
 [OUTPUT]
-    Name        file
+    Name        null
     Match       *
