--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ env:
   matrix:
     - MAKE_TASK="lintall travis-lint gosec scan-nancy"
 
-matrix:
-  fast_finish: true
-  allow_failures:
-    - go: tip
+# matrix:
+#   fast_finish: true
+#   allow_failures:
+#     - go: tip
 
 before_install:
   - pip --quiet install yamllint
   - go get github.com/sonatype-nexus-community/nancy
 
-script:
-  - make $MAKE_TASK
+# script:
+#   - make $MAKE_TASK
 
 cache:
   directories:
