Adding an exclude of typecheck in the linter to circumvent travis issues
Signed-off-by: Chris Wolf <christopher.wolf@ibm.com>
Signed-off-by: Jeff Chauvin <chauvinj@us.ibm.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,9 @@ issues:
         - gosec
         - unparam
         - wsl
+    - path: _test\.go
+      linters:
+        - typecheck
   # maximum count of issues with the same text. set to 0 to disable. default is 3.
   max-same-issues: 0
 linters-settings:
