blocking typecheck golang lint on all go files for travis env issue
Signed-off-by: Chris Wolf <christopher.wolf@ibm.com>
Signed-off-by: Jeff Chauvin <chauvinj@us.ibm.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,7 +28,7 @@ issues:
         - gosec
         - unparam
         - wsl
-    - path: _test\.go
+    - path: \.go
       linters:
         - typecheck
   # maximum count of issues with the same text. set to 0 to disable. default is 3.
