--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 ---
 language: go
+os: linux
+dist: focal
 go:
   - "1.18.6"
 
 before_install:
   - pip --quiet install yamllint
+  - [[ -f go.mod ]] && cat go.mod
   - go get github.com/sonatype-nexus-community/nancy
 
 cache:
