--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 ---
 language: go
+os: linux
+dist: focal
 go:
-  - "1.16"
+  - "1.18.6"
 
 before_install:
   - pip --quiet install yamllint
   - go get github.com/sonatype-nexus-community/nancy
+  - go mod tidy
 
 cache:
   directories:
