--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,11 @@ issues:
         - gosec
         - unparam
         - wsl
+        - revive
+    - path: '(.+)_test.go'
+      linters:
+        - revive
+      text: "dot-imports: should not use dot imports"
   # maximum count of issues with the same text. set to 0 to disable. default is 3.
   max-same-issues: 0
 linters-settings:
